--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  d_info: ^0.2.0
   d_method: ^0.2.6
+  dartz: ^0.10.1
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
