--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  flutter_staggered_grid_view: ^0.7.0
   google_fonts: ^6.2.1
   http: ^1.3.0
   intl: ^0.20.2
